mdapipkg/objects/Cvent_Payment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cvent Payments Details</relationshipLabel>
        <relationshipName>Cvent_Payments_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Cvent Payments Details</relationshipLabel>
        <relationshipName>Cvent_Payments_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <label>ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <externalId>true</externalId>
        <label>Transaction ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Number__c</fullName>
        <label>Transaction Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Cvent Payment Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Amount__c</columns>
        <columns>Contact__c</columns>
        <columns>Event__c</columns>
        <columns>ID__c</columns>
        <columns>Payment_Type__c</columns>
        <columns>Transaction_Date__c</columns>
        <columns>Transaction_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cvent Payment Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cvent Payments Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>